--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,7 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>ServletAdaptor</servlet-name>
-        <url-pattern>/resources/*</url-pattern>
+        <url-pattern>/services/*</url-pattern>
     </servlet-mapping>
     <filter>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
@@ -61,7 +61,7 @@
         <web-resource-collection>
             <web-resource-name>REST stuff</web-resource-name>
             <description/>
-            <url-pattern>/resources/*</url-pattern>
+            <url-pattern>/services/*</url-pattern>
         </web-resource-collection>
     </security-constraint>
     <login-config>
