--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,6 @@
             <layout>default</layout>  
         </repository>
     </repositories>
-    
     <dependencies>
         <dependency>
             <groupId>org.primefaces</groupId>
@@ -45,7 +44,7 @@
         </dependency>
         <dependency>
             <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
+            <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
