--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ src/main/webapp/Admin/editTheme.xhtml
 src/main/webapp/Admin/listCourses.xhtml
 
 src/main/webapp/Admin/newVideo.xhtml
+
+.DS_Store
