--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>no.hials.muldvarp</groupId>
     <artifactId>MuldvarpWeb</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-TEST</version>
     <packaging>war</packaging>
 
     <name>MuldvarpWeb</name>
